<resources>
    <string name="app_name">Together</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_message">Message</string>
    <string name="title_profile">Profile</string>
    <string name="title_library">Library</string>
    <string name="follow">Follow</string>
    <string name="un_follow">Un Follow</string>
    <string name="message">Message</string>
    <string name="user_name">User Name</string>
    <string name="_0000">0000</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="login">Login</string>
    <string name="sign_up">sign up</string>
    <string name="login_message">Best place to write your target and share your journey experiences</string>
    <string name="description_bold"><b><i>Description: </i></b></string>
    <string name="target_bold"><b><i>Target: </i></b></string>
    <string name="hello">Hello !</string>
    <string name="persons">Persons</string>
    <string name="targets">Targets</string>
    <string name="welcome">Welcome !</string>
    <string name="sign_in_message">Sign in to continue</string>
    <string name="e_mail">e-mail</string>
    <string name="password">password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="or">or</string>
    <string name="login_with">Login With</string>
    <string name="don_t_hava_an_account">Don\'t hava an account?</string>
    <string name="hi">Hi !</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="username">username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="share">Share</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="forever">Forever</string>
    <string name="forever_date">"2050/01/01"</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="default_date">----/--/--</string>
    <string name="like">Like</string>
    <string name="un_like">Unlike</string>
    <string name="target">Target:</string>
    <string name="period">Period:</string>
    <string name="participants">Participants</string>
    <string name="join">Join</string>
    <string name="leave">Leave</string>
    <string name="group_message">Group Message</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="monday_to_friday">Monday To Friday</string>
    <string name="custom">Custom</string>
    <string name="password_again">password again</string>
    <string name="error_genel_message">Something went wrong.</string>
    <string name="error_message">Nothing to Show</string>
    <string name="name">name</string>
    <string name="discover">Discover</string>
    <string name="add_reels">Add Reels</string>
    <string name="change_user_info">Update User Information</string>
    <string name="app_share">Share the Application</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="edit_background_image">Change the background</string>
    <string name="edit_profile_image">Change profile picture</string>
    <string name="change_password">Change Password</string>
    <string name="log_out">Log out</string>
    <string name="clear_chat">Clear chat</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="new_password_again">new password again</string>
    <string name="save">Save</string>
    <string name="bio">Bio</string>
    <string name="verify_code">verify code</string>
    <string name="three_points">...</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="delete_firebase_message">This message was deleted</string>
    <string name="liked_tags">Favorite Tags</string>
    <string name="search_here">Search Here</string>
    <string name="delete_account">Delete Account</string>
    <string name="share_reels">Share a Story</string>
    <string name="share_target">Create Target</string>
    <string name="add_like_tag">Add Like Tag</string>
    <string name="notification">Notification</string>
    <string name="notification_closed">Chat Notification Captured</string>
    <string name="notification_opened">Chat Notification Opened</string>
    <string name="new_password_error_message">Passwords are not the same</string>
    <string name="permissions_must_be_granted">Gallery and camera permission must be granted!</string>
    <string name="task_canceled">Task Cancelled</string>
    <string name="pending_targets">Pending Targets</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="favorites">Favorites</string>
    <string name="completed">Completed</string>
    <string name="delete_story">Story will be deleted!</string>
    <string name="log_out_message">Check Out!</string>
    <string name="delete_account_message">Your account will be\ndeleted irreversibly!</string>
    <string name="error_tag_message">At least 1 and at most 4 tags must be added</string>
    <string name="required">Required</string>
    <string name="year_2050">2050/01/01</string>
    <string name="wrong_email">Wrong email</string>
    <string name="account_already_exists">This account already exists. Signed in.</string>
    <string name="wrong_name">Wrong name</string>
    <string name="wrong_username">Wrong username</string>
    <string name="remove_member_message">Member will be removed.\nAre you sure?</string>
    <string name="permission_needed_feature">Permission needed feature</string>
    <string name="give_permission">Give Permission</string>
    <string name="password_size_error">Password must be at least 8 characters</string>
    <string name="wrong_verify_code">Wrong verify code</string>
    <string name="password_digit_error">Password must contain numbers</string>
    <string name="password_upper_case_error">Password must contain at least one uppercase letter</string>
    <string name="password_lower_case_error">Password must contain at least one lowercase letter</string>
    <string name="default_date_time">1999/04/05 11:22</string>
    <string name="default_unread_message">1 Unread Message</string>
    <string name="default_message">testtesttesttesttesttesttesttesttesttesttesttesttest</string>
    <string name="default_time">11:25</string>
    <string name="default_date_message">14 Mart 2023</string>
    <string name="remove_member">Remove Member</string>
    <string name="default_discover_title">discover item title</string>
    <string name="target_members_message">Swipe right on the member you want to remove.</string>
    <string name="all_member"><![CDATA[All  Member >]]></string>
    <string name="tags">Tags</string>
    <string name="upload">Upload</string>
    <string name="write_a_message">Write a message</string>
    <string name="unread_message">Unread Message</string>
    <string name="target_do_it_notification_message">The target is waiting for you to be completed.</string>
    <string name="are_your_sure">Are your sure?</string>
    <string name="copy">Copy</string>
    <string name="you">You</string>
    <string name="message_copied">Message Copied</string>
    <string name="delete_message_info">Message Will Be Deleted.\nAre you sure?</string>
    <string name="switch_visibility_public_desc">Public \nEveryone can see</string>
    <string name="switch_visibility_private_desc">Private \nOnly members and those with the link can see it</string>
    <string name="auto_send_title">Notify other users via message when \nthe task is completed.</string>
    <string name="task_completed">TASK COMPLETED</string>
    <string name="done">I Did</string>
    <string name="send_report">Report</string>
    <string name="report_question">Why are you reporting this?</string>
    <string name="not_like">I just don\'t like it</string>
    <string name="nudity_or_sexual_activity">Nudity or sexual activity</string>
    <string name="hate_speech_or_symbols">Hate speech or symbols</string>
    <string name="bullying_or_harassment">Bullying or harassment</string>
    <string name="illegal_discourse">Illegal speech</string>
    <string name="other">Other</string>
    <string name="comment">Comment</string>
    <string name="send">Submit</string>
</resources>