<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:iconTint="@color/dark_blue"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_share"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        android:title="Share"/>

    <item
        android:id="@+id/navigation_library"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/title_library"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profile" />

</menu>