<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/back_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_arrow_back_24" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/send_report"
                android:textColor="?colorPrimary"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/back_btn"
                app:layout_constraintStart_toEndOf="@+id/back_btn"
                app:layout_constraintTop_toTopOf="@+id/back_btn" />

            <TextView
                android:id="@+id/question_test"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/report_question"
                android:textColor="?colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:checkedButton="@+id/enabled_selected"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/question_test">

                <RadioButton
                    android:id="@+id/enabled_selected"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:enabled="true"
                    android:text="@string/not_like" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:enabled="true"
                    android:text="@string/nudity_or_sexual_activity" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:enabled="true"
                    android:text="@string/hate_speech_or_symbols" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:enabled="true"
                    android:text="@string/bullying_or_harassment" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:enabled="true"
                    android:text="@string/illegal_discourse" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="false"
                    android:enabled="true"
                    android:text="@string/other" />
            </RadioGroup>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/comment_edit_lyt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="30dp"
                app:errorEnabled="true"
                app:errorIconDrawable="@null"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/comment_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:hint="@string/comment"
                    android:inputType="textMultiLine"
                    android:lines="10"
                    android:maxLength="200"
                    android:minLines="5"
                    android:textColor="?colorPrimary"
                    tools:ignore="RtlHardcoded,TextFields" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/send_report"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="24dp"
                android:layout_weight="1"
                android:background="@drawable/full_oval"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comment_edit_lyt" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>