<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.SignInFragment">

    <ImageButton
        android:id="@+id/top_back_btn"
        android:backgroundTint="#00FFFFFF"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/welcome"
        android:textColor="?colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/email_edit_lyt"
        app:layout_constraintTop_toBottomOf="@+id/top_back_btn" />

    <TextView
        android:id="@+id/sign_in_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/sign_in_message"
        android:textColor="#7480CA"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/email_edit_lyt"
        app:layout_constraintTop_toBottomOf="@+id/welcome_text" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_edit_lyt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_message">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_edit_txt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="?colorPrimary"
            tools:ignore="TextFields" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_edit_lyt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:errorEnabled="true"
        app:errorIconDrawable="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_edit_lyt"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit_txt"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textColor="?colorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_btn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/gradient_normal"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edit_lyt" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forget_password_btn"
        android:background="#00FFFFFF"
        android:textColor="?colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        android:text="@string/forget_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />

    <TextView
        android:id="@+id/or_txt"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textColor="?colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/social_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_password_btn" />

    <View
        android:id="@+id/line1"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/or_txt"
        app:layout_constraintEnd_toStartOf="@+id/or_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/or_txt" />

    <View
        android:id="@+id/line2"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="50dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="@+id/or_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/or_txt"
        app:layout_constraintTop_toTopOf="@+id/or_txt" />

    <TextView
        android:id="@+id/social_txt"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/login_with"
        android:textColor="?colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/social_icons_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/social_icons_layout"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/google_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_icons8_google"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/facebook_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_icons8_facebook" />

        <ImageButton
            android:id="@+id/twitter_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_icons8_twitter_circled" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/account_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_hava_an_acoount"
            android:textColor="?colorPrimary" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="?colorSecondary" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>